@@ -13,9 +13,9 @@ out_vtx = Vertex(2, 0, mark=CIRCLE)
 l1 = Label("Drell-Yan QCD vertex correction", x=0, y=2)
 
 fa1 = Fermion(in1, in_vtx).addArrow().addLabel(r"\Pelectron")
-fa2 = Fermion(in_vtx, in2).addArrow().addLabel(r"\Ppositron")
+fa2 = Fermion(in_vtx, in2).addArrow().addLabel(r"\Ppositron").addParallelArrow(size=0.1,displace=-0.05,sense=-1)
 bos = Photon(in_vtx, out_vtx).addLabel(r"\Pphoton/\PZ")
-fb1 = Fermion(out1, out_vtx).addArrow(0.2).addLabel(r"\APquark")
+fb1 = Fermion(out1, out_vtx).addArrow(0.2).addLabel(r"\APquark").addParallelArrow(size=0.1,displace=-0.05,sense=-1)
 fb2 = Fermion(out_vtx, out2).addArrow(0.8).addLabel(r"\Pquark")
 glu = Gluon(midpoint(out_vtx, out1), midpoint(out_vtx, out2)).set3D()
 glu.invert().bend(0.5).addLabel("\Pgluon", displace=0.25)
